# swagger.yaml
@@ -1,29 +1,20 @@
 tags:
-- name: users
-  description: users API
+- name: auth
+  description: Auth API
+- name: hello
+  description: Hello API
 
 paths:
-# [GET] users
-  /users:
-    get:
+# [POST] signup
+  /signup:
+    post: 
       tags:
-      - users
-      summary: Find All Users
-      responses:
-        200:
-          description: 'OK'
-        500:
-          description: 'Server Error'
-
-# [POST] users
-    post:
-      tags:
-      - users
-      summary: Add User
-      parameters:
-      - name: body
+      - auth
+      summary: Create a new user
+      parameters: 
+      - name: signup
         in: body
-        description: user Data
+        description: User Email
         required: true
         schema:
           $ref: '#/definitions/users'
@@ -35,77 +26,99 @@ paths:
         409:
           description: 'Conflict'
         500:
-          description: 'Server Error'
-
-# [GET] users/id
-  /users/{id}:
-    get:
+          description: 'Internal Server Error'
+# [POST] signin
+  /signin: 
+    post: 
       tags:
-      - users
-      summary: Find User By Id
-      parameters:
-      - name: id
-        in: path
-        description: User Id
-        required: true
-        type: integer
-      responses:
-        200:
-          description: 'OK'
-        409:
-          description: 'Conflict'
-        500:
-          description: 'Server Error'
-
-# [PUT] users/id
-    put:
-      tags:
-      - users
-      summary: Update User By Id
-      parameters:
-      - name: id
-        in: path
-        description: user Id
-        required: true
-        type: integer
-      - name: body
+      - auth
+      summary: Login user
+      parameters: 
+      - name: signin
         in: body
-        description: user Data
+        description: User Email
         required: true
         schema:
-          $ref: '#/definitions/users'
+          $ref: '#/definitions/login_user'
       responses:
         200:
           description: 'OK'
         400:
           description: 'Bad Request'
+        401:
+          description: 'Unauthorize'
         409:
           description: 'Conflict'
         500:
-          description: 'Server Error'
-
-# [DELETE] users/id
-    delete:
+          description: 'Internal Server Error'
+# [POST] logout
+  /logout: 
+    post: 
       tags:
-      - users
-      summary: Delete User By Id
-      parameters:
-      - name: id
-        in: path
-        description: user Id
-        required: true
-        type: integer
+      - auth
+      summary: Logout user
       responses:
         200:
           description: 'OK'
-        409:
-          description: 'Conflict'
+        401:
+          description: 'Unauthorize'
+        500:
+          description: 'Internal Server Error'
+# [GET] hello world
+  /hello-world:
+    get:
+      tags:
+      - hello
+      summary: Get hello world
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorize'
+        403: 
+          description: 'Forbidden'
+        500:
+          description: 'Server Error'
+
+# [GET] admin hello world
+  /admin/hello-world:
+    get:
+      tags:
+      - hello
+      summary: Get hello world
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        401:
+          description: 'Unauthorize'
+        403: 
+          description: 'Forbidden'
         500:
           description: 'Server Error'
 
 # definitions
 definitions:
   users:
+    type: object
+    required:
+        - email
+        - password
+        - role
+    properties:
+      email:
+        type: string
+        description: user Email
+      password:
+        type: string
+        description: user Password
+      role: 
+        type: string
+        description: user role
+  login_user:
     type: object
     required:
         - email
@@ -117,9 +130,6 @@ definitions:
       password:
         type: string
         description: user Password
-      role: 
-        type: string
-        description: user role
 
 schemes:
  - https
